<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_drawing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_finish"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_touch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/fad_bg_black_rounded"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/Fad_video_sign_tap_text"
                    android:textColor="#FFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.na_at.fad.randomnumberlab.sign_drawn.DrawingCanvasView
                android:id="@+id/v_canvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/fad_bg_white_rounded"
                android:visibility="invisible" />

        </FrameLayout>

        <Button
            android:id="@+id/btn_finish"
            style="@style/Fad_BaseButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginVertical="12dp"
            android:text="@string/Fad_video_sign_finish_text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_clean_signature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_clean_signature"
            style="@style/Fad_SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/Fad_sign_clean_signature"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fad_bg_white_rounded"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/gl_horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_sign"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:background="@drawable/fad_bg_gray_rounded"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/Fad_video_sign_result_sign"
                android:textColor="#fff"
                android:textSize="12sp" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#2B2B2B"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_horizontal">

            <Button
                android:id="@+id/btn_confirm"
                style="@style/Fad_BaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="0dp"
                android:text="@string/Fad_video_sign_result_confirm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_retry"
                style="@style/Fad_SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="0dp"
                android:text="@string/Fad_video_sign_result_retry"
                android:textAllCaps="false" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>